--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         <div class="image-section"></div>
        </div>
        <div class="box"></div>
-       <div class="box"></div>
+       <div class="box">
+        <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis impedit suscipit ipsum repellat excepturi velit architecto obcaecati delectus. Quaerat sunt cum libero dignissimos culpa itaque sit nostrum praesentium rem sed.
+        Dolorem praesentium inventore veniam sequi quas deleniti, repellendus sint, et eos ut harum cumque amet, accusantium culpa veritatis provident quos! Illo dicta quae necessitatibus eaque suscipit consequatur at possimus neque!</P>
+       </div>
     </div>
     
 </body>
